--- a/index.html
+++ b/index.html
@@ -3,14 +3,105 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Great Idea - Responsive I</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <!---<link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">-->
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
-<body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-</body>
+  <body>
+  
+<header>
+  <nav>
+    <div class="nav-links"> 
+      <a href=""> Services </a>
+      <a href=""> Product </a>
+      <a href=""> Vision </a>
+      <a href=""> Features </a>
+      <a href=""> About </a>
+      <a href=""> Contact </a>
+    </div>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+    </nav>
+
+</header>
+  
+<section class = "front">
+  <div class = "title">
+      <h3>Innovation</h3>
+      <h3>On</h3>
+      <h3>Demand</h3>
+      <button>Get Started</button>
+  </div>
+  <div class="title">
+    <img src="img/header-img.png" alt="Image of a code snippet.">
+  </div>
+</section>
+  
+  <hr></hr>
+ 
+ <section class="main">
+  
+   <div class = "top">
+      <div class="content">
+        <h2>Features</h2>
+          <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+          </p>
+      </div>
+
+      <div class="content">
+        <h2>About</h2>
+        <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+        </p>
+      </div>
+    </div>
+
+    <div class = "middle">
+        <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    </div>
+
+    <div class ="bottom">
+        <div class = "content">
+            <h2>Services</h2>
+            <p>
+                Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+            </p>
+        </div>
+
+          <div class ="content">
+            <h2>Product</h2>
+              <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+          </div>
+
+          <div class="content">
+            <h2>Vision</h2>
+              <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+                </p>
+          </div>
+      </div>
+    </div>
+  </section>
+  
+  <hr>
+
+  <footer>
+    <h2>Contact</h2>
+    <address>
+        123 Way 456 Street <br>
+        Somewhere, USA
+    </address>
+    <p> 1 (888) 888-8888</p>
+    <p>sales@greatidea.io</p>
+    <p class="copyright">
+        Copyright Great Idea! 2018</p>
+  </footer>
+  
+  </body>
 </html>
